--- a/src/components/scss/header.module.scss
+++ b/src/components/scss/header.module.scss
@@ -11,8 +11,10 @@
 .header {
 	background-color: #8b4394;
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: space-between;
 	align-items: center;
+	margin: 0 auto;
+	width: 100%;
 
 	h1 {
 		margin: 0;
@@ -53,6 +55,7 @@
 	.nav-list {
 		display: flex;
 		list-style-type: none;
+
 	}
 
 	.nav-item {
