fix color scheme

--- a/src/components/scss/footer.module.scss
+++ b/src/components/scss/footer.module.scss
@@ -1,6 +1,6 @@
 .footer {
 	margin-top: 3rem;
-	background-color: #8b4394;
+	background-color: #5c232f;
 	text-align: center;
 	color: rgb(243, 234, 234);
 	font-size: .8rem;
