--- a/src/components/scss/layout.module.scss
+++ b/src/components/scss/layout.module.scss
@@ -4,7 +4,7 @@
 	flex-direction: column;
 	min-height: 100vh;
 	width: 100%;
-	background: rgb(252, 242, 252);
+	background: rgb(250, 248, 250);
 
 	img {
 		max-width: 80%;
@@ -16,8 +16,8 @@
 	width: 80%;
 	text-align: center;
 	margin: 0 auto;
-	-webkit-box-shadow: 0px 20px 32px -26px rgba(161,145,161,1);
-	-moz-box-shadow: 0px 20px 32px -26px rgba(161,145,161,1);
-	box-shadow: 0px 20px 32px -26px rgba(161,145,161,1);
+	-webkit-box-shadow: 0px 20px 32px -26px rgb(202, 193, 202);
+	-moz-box-shadow: 0px 20px 32px -26px rgb(172, 165, 172);
+	box-shadow: 0px 20px 32px -26px rgb(165, 162, 165);
 	background: rgba(255, 245, 255, 1);	
 }
