--- a/src/components/scss/layout.module.scss
+++ b/src/components/scss/layout.module.scss
@@ -23,14 +23,22 @@
 	padding: 20px;
 
 	.blog-content {
-		padding: 2px 0;
 		line-height: 1.5;
 		text-align: left;
 		width: 740px;
 		margin: 0 auto;
 
+		h1, h2, h3, p {
+			margin: 20px 0;
+		}
+
 		@media only screen and (max-width: 780px) {
 			width: 95%;
+		}
+
+		.blog-date {
+			text-align: right;
+			font-size: .7rem;
 		}
 
 		img {
